added: login pages (need styles for country select)

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,2 +1,2 @@
-@import url('https://fonts.cdnfonts.com/css/termina');
 @import url('https://fonts.cdnfonts.com/css/futura-pt');
+@import url("https://use.typekit.net/cag3ebp.css");
